# pdf2png

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pdf2png.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: convert.sh  setup.sh
src/pdf2png/: __init__.py  __main__.py  converter.py
tests/: test_pdf2png.py
