[project]
name = "pdf2png"
version = "0.1.0"
description = "Convert scanned PDFs into lossless per-page PNG images"
authors = [
    {name = "Dominic Fahey", email = "domfahey@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "pikepdf >= 9.0.0",
    "Pillow >= 10.0.0"
]
readme = "README.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff >= 0.6.0",
    "mypy >= 1.11.0",
    "pytest >= 8.0.0",
    "pytest-cov >= 5.0.0",
]
