[project]
name = "pdf2png"
version = "0.1.0"
description = "Convert scanned PDFs into lossless per-page PNG images"
authors = [
    {name = "Dominic Fahey", email = "domfahey@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "pikepdf >= 9.0.0",
    "Pillow >= 10.0.0"
]
readme = "README.md"

[project.scripts]
pdf2png = "src.pdf2png:main"

[dependency-groups]
dev = [
    "ruff >= 0.6.0",
    "mypy >= 1.11.0",
    "pytest >= 8.0.0",
    "pytest-cov >= 5.0.0",
    "pip-audit>=2.9.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
extend-unsafe-fixes = ["ALL"]
select = ["E", "F", "W", "N", "B", "A", "C4", "T10", "T20", "SIM", "PIE", "RET", "FLY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["N803", "N806", "S101", "PLR0913", "PLR0912", "PLR0915", "FBT001", "FBT003", "A002", "A003", "EM101", "EM102", "TRY003", "FBT002", "TD002", "TD003", "FIX002", "SIM117"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
no_namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --strict-config"
